Fix HA1242 contract on Java 8